k8s/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ms-ecommerce-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-service
spec:
  hosts:
  - "*"
  gateways:
  - ms-ecommerce-gateway
  http:
  - match:
    - uri:
        prefix: "/python"
    route:
    - destination:
        host: python-service
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: java-service
spec:
  hosts:
  - "*"
  gateways:
  - ms-ecommerce-gateway
  http:
  - match:
    - uri:
        prefix: "/java"
    route:
    - destination:
        host: java-service
        port:
          number: 8080
